test/spec_vectors/unreached-invalid/fail/module_17.wat
(module (func $type-block-value-num-vs-void-after-break (block (br 0) (i32.const 1))))